# wg-sigma-protocols-impl

./: Cargo.toml  README.md
examples/: schnorr.rs
src/: hash_registry.rs  interactive_proofs.rs  lib.rs  nizk_proofs.rs
src/protocols/: mod.rs  schnorr_dlog.rs
