[package]
name = "sigma_protocol_standard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
rand = "0.8.4"
digest = { version = "0.9" }


[dev-dependencies]
blake2 = { version = "0.9", default-features = false }
ark-bls12-377 = "0.3.0"